[gd_scene load_steps=12 format=2]

[ext_resource path="res://StageOne.tscn" type="PackedScene" id=1]
[ext_resource path="res://health/HealthBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://InterfaceLayer.gd" type="Script" id=4]
[ext_resource path="res://inventory/Inventory.tscn" type="PackedScene" id=5]
[ext_resource path="res://inventory/SplitBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://StatesStackDisplay.gd" type="Script" id=7]
[ext_resource path="res://sprites/fonts/ThaleahFat.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 12
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[node name="Game" type="Node"]
script = ExtResource( 3 )

[node name="LevelLayer" type="CanvasLayer" parent="."]
layer = 0
follow_viewport_enable = true

[node name="StageOne" parent="LevelLayer" instance=ExtResource( 1 )]

[node name="InterfaceLayer" type="CanvasLayer" parent="."]
layer = 5
script = ExtResource( 4 )

[node name="HealthBar" parent="InterfaceLayer" instance=ExtResource( 2 )]
visible = false
light_mask = 0
anchor_left = 0.695
anchor_top = 0.072
anchor_right = 0.695
anchor_bottom = 0.072
margin_left = -525.628
margin_top = -32.8596
margin_right = -342.628
margin_bottom = -6.85963

[node name="Inventory" parent="InterfaceLayer" instance=ExtResource( 5 )]
light_mask = 0
margin_left = 538.031
margin_top = 8.63393
margin_right = 793.618
margin_bottom = 312.047

[node name="SplitBox" parent="InterfaceLayer" instance=ExtResource( 6 )]
visible = false
light_mask = 0

[node name="StatesStackDisplay" type="Panel" parent="InterfaceLayer"]
margin_right = 77.0
margin_bottom = 73.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="InterfaceLayer/StatesStackDisplay"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 0
text = "PUSHOWN"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="States" type="Label" parent="InterfaceLayer/StatesStackDisplay"]
anchor_left = 0.25974
anchor_top = 0.260274
anchor_right = 1.0
anchor_bottom = 0.958904
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 0
text = "Jump"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Numbers" type="Label" parent="InterfaceLayer/StatesStackDisplay"]
anchor_left = 0.0909091
anchor_top = 0.260274
anchor_right = 0.987013
anchor_bottom = 0.986301
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 0
text = "1."
__meta__ = {
"_edit_use_anchors_": true
}
